<resources>
	<string name="app_name">Prevoz</string>
    <string name="account_type">org.prevoz.account</string>

    <string name="today">danes</string>
    <string name="tomorrow">jutri</string>

    <!-- Search form strings -->
    <string name="search_form_title">Iskanje</string>
    <string name="search_form_from_hint">Kraj odhoda</string>
    <string name="search_form_to_hint">Kraj prihoda</string>
    <string name="search_form_date">Datum</string>
    <string name="search_form_button_search">Išči</string>
    <string name="search_form_button_searching">Iščem…</string>
    <string name="login_title">Prijava</string>
    <string name="search_no_results">Najden ni bil noben prevoz</string>

    <string name="rideinfo_call">Pokliči</string>
    <string name="rideinfo_send_sms">Pošlji SMS</string>
    <string name="newride_title">Nov prevoz</string>

    <plurals name="notify_statusbar">
        <item quantity="one">Nov prevoz na relaciji</item>
        <item quantity="two">Nova prevoza na relaciji</item>
        <item quantity="few">Novi prevozi na relaciji</item>
        <item quantity="other">Novi prevozi na relaciji</item>
    </plurals>

    <plurals name="notify_statusbar_private">
        <item quantity="one">En nov prevoz</item>
        <item quantity="two">Dva nova prevoza</item>
        <item quantity="few">%d novi prevozi</item>
        <item quantity="other">%d novih prevozov</item>
    </plurals>

    <string-array name="ride_forms">
        <item>nov prevoz</item>
        <item>nova prevoza</item>
        <item>novi prevozi</item>
        <item>novih prevozov</item>
    </string-array>

    <!--  Day and month names -->
    <string-array name="day_names">
        <item>Ponedeljek</item>
        <item>Torek</item>
        <item>Sreda</item>
        <item>Četrtek</item>
        <item>Petek</item>
        <item>Sobota</item>
        <item>Nedelja</item>
    </string-array>

    <string-array name="short_day_names">
        <item>pon</item>
        <item>tor</item>
        <item>sre</item>
        <item>čet</item>
        <item>pet</item>
        <item>sob</item>
        <item>ned</item>
    </string-array>

    <string-array name="month_names">
        <item>januar</item>
        <item>februar</item>
        <item>marec</item>
        <item>april</item>
        <item>maj</item>
        <item>junij</item>
        <item>julij</item>
        <item>avgust</item>
        <item>september</item>
        <item>oktober</item>
        <item>november</item>
        <item>december</item>
    </string-array>

    <string-array name="notify_day_names">
        <item>ponedeljek</item>
        <item>torek</item>
        <item>sredo</item>
        <item>četrtek</item>
        <item>petek</item>
        <item>soboto</item>
        <item>nedeljo</item>
    </string-array>

    <!-- Auto-login bar description [CHAR-LIMIT=40] -->
    <string name="autologin_bar_text">Sign in as</string>
    <!-- Login button [CHAR-LIMIT=10] -->
    <string name="autologin_bar_login_text">Sign in</string>
    <!-- Hide button [CHAR-LIMIT=10] -->
    <string name="autologin_bar_hide_text">Hide</string>
    <!-- Login failure text [CHAR-LIMIT=25] -->
    <string name="autologin_bar_error">Couldn\'t sign in.</string>
    <string name="ride_delete_message">Ali želite izbrisati prevoz v %1$s ob %2$s?</string>
    <string name="ride_delete_ok">Izbriši</string>
    <string name="ride_delete_cancel">Prekliči</string>
    <string name="ride_delete_progress">Brišem…</string>
    <string name="ride_delete_success">Prevoz izbrisan.</string>
    <string name="ride_delete_failure">Prevoza ni bilo mogoče izbrisati.</string>
    <string name="newride_error_phone">Vnesite telefonsko številko.</string>
    <string name="newride_error_people_num">Število potnikov mora biti med 1 in 6.</string>
    <string name="newride_error_price_invalid">Vnesite veljavno ceno prevoza.</string>
    <string name="newride_error_time_missing">Vnesite čas prevoza.</string>
    <string name="newride_error_date_missing">Vnesite datum prevoza.</string>
    <string name="newride_error_date_passed">Datum in čas prevoza je že minil.</string>
    <string name="newride_error_to_missing">Vnesite kraj prihoda.</string>
    <string name="newride_error_from_missing">Vnesite kraj odhoda.</string>
    <string name="menu_newride">Nov prevoz</string>
    <string name="notifications_subscribed_title">Naročena obvestila</string>
    <string name="search_noresults">Za ta dan in relacijo ni objavljenih prevozov.</string>
    <string name="myrides_title">Moji prevozi</string>
    <string name="newride_time">Čas</string>
    <string name="newride_price">Stroški</string>
    <string name="newride_people">Oseb</string>
    <string name="newride_phone_number">Telefonska številka</string>
    <string name="newride_insurance">Nezgodno zavarovanje potnikov</string>
    <string name="newride_notes">Opombe</string>
    <string name="newride_button_submit">Oddaj prevoz</string>
    <string name="main_logout">Odjava</string>
    <string name="newride_publish_success">Prevoz je bil oddan.</string>
    <string name="newride_publish_failure">Pri oddajanju je prišlo do napake :(</string>
    <string name="rideinfo_ride_full">Prevoz je poln.</string>
    <string name="myrides_header_bookmarks">Zaznamki</string>
    <string name="myrides_header_published_rides">Objavljeni prevozi</string>
    <string name="rideinfo_delete">Izbriši</string>
    <string name="rideinfo_edit">Uredi</string>
    <string name="rideinfo_cancel">Prekliči</string>
    <string name="rideinfo_submit">Oddaj</string>
    <string name="cd_bookmark">Priljubljen prevoz</string>
    <string name="cd_notification_cancel">Prekliči obveščanje</string>
</resources>